--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	background-color: #000000;
 	}
 </style>
-<div style="width: 100;">
+<div style="width: 80%; margin: 0px auto;">
 <img src="https://i.pinimg.com/236x/d4/bc/51/d4bc51e99522f33312cd747d14204b8b.jpg"/ style="width: 40;">
 <img src="https://i.pinimg.com/236x/e1/be/6d/e1be6d26131f0619a5da71214d16f3ce.jpg"/ style="width: 40;">
 <img src="https://i.pinimg.com/236x/79/fb/60/79fb605e2bbd06f8d4a776f2a375d21e.jpg"/ style="width: 40;">
